--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <label for="new-phone-number">Phone Number</label>
             <input type="text"  class="form-control" id="new-phone-number">
           </div>
+          <div class="form-group">
+            <label for="new-email-address">Email Address</label>
+            <input type="text"  class="form-control" id="new-email-address">
+          </div>
           <button type="submit" class="btn-primary">Add</button>
         </form>
         <hr>
@@ -43,6 +47,7 @@
           <p>First Name: <span class="first-name"></span></p>
           <p>Last Name: <span class="last-name"></span></p>
           <p>Phone Number: <span class="phone-number"></span></p>
+          <p>Email Address: <span class="email-address"></span></p>
           <div id="buttons">
           </div>
         </div>
